[project]
name = "arrranger"
version = "0.1.0"
description = "A project that uses requests, croniter, and schedule."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "croniter>=1.4.1",
    "schedule>=1.2.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/arrranger"
"Bug Tracker" = "https://github.com/yourusername/arrranger/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.wheel]
include = [
  "arrranger_logging.py",
  "arrranger_scheduler.py",
  "arrranger_sync.py",
]